chart/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-platform-cost-exporter
  namespace: ai
  labels:
    app: ai-platform-cost-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-platform-cost-exporter
  template:
    metadata:
      labels:
        app: ai-platform-cost-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: ai-platform-service
        image: teaglebuilt/ai_platform_cost_exporter:latest
        imagePullPolicy: Always
        command: [ "uv", "run", "api/main.py" ]
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
